2002-10-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/stem-engraver.cc (acknowledge_grob): don't crash on
	undefined tremolo. 

2002-10-15  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py (g_make_html): New global variable.
	(schedule_lilypond_block): Don't compute EPS and PNG for `texi'
	if `g_make_html' isn't set.
	[main]: Add format `texi-html'.
	(option_definitions): Updated.
	* Documentation/user/lilypond-book.itely: Updated.

	* make/lilypond-vars.make (LILYPOND_BOOK_FORMAT): New variable.
	* make/ly-rules.make (%.texi, %.nexi): Use it.
	* stepmake/stepmake/www-targets.make (web): Pass `tex-html' as
	format to lilypond-book.
	* GNUmakefile.in (web-doc): Ditto.

2002-10-14  Werner Lemberg  <wl@gnu.org>

	Further improve TeX output.  The produced files are about 40%
	smaller.  `lilyponddefs.tex' is now read only once.

	* tex/lilyponddefs.tex: Remove footer stuff.
	(\ifundefined): Renamed to...
	(\lilypondundefined): This.  Use LaTeX's definition to
	make it nestable and make it global.
	(\lilypondstart, \lilypondend): New macro to initialize LilyPond
	output.
	(\lilypondspecial): New macro to read `music-drawing-routines.ps'.
	(\fetasixteen, \fetafont, \fetachar, \botalign, \leftalign): Make
	them global.
	(\placebox): Renamed to...
	(\lyitem): This.
	Make it global and call \outputscale by itself.
	(\lybox, \lyvrule): New macros to reduce input data.
	(\lilypondfirst, \lilypondsecond, \lilypondloop, \lilyponditerate):
	New auxiliary macros.
	(\SkipLilydefs, \EndLilyPondOutput): Removed.
	* tex/lily-pdf-defs.tex, tex/lily-ps-defs.tex (\lilySpace): Renamed
	to...
	(\lilypondspace): This and made it global.
	(\turnOnPostScript): Renamed to...
	(\lilypondpostscript): This and made it global.
	(\turnOnExperimentalFeatures): Renamed to...
	(\lilypondexperimentalfeatures): This and made it global.
	* tex/lily-ps-defs.tex (\PSsetTeXdimen): Renamed to...
	(\lilypondsetdimen): This and made it global.